Version 2.02.176 -
===================================
  Ignore --stripes/--stripesize on RAID takeover
  Improve used paths for generated systemd units and init shells.
  Disallow creation of snapshot of mirror/raid subLV (was never supported).
  Fix regression in more advanced vgname extraction in lvconvert (2.02.169).
  Allow lvcreate to be used for caching of _tdata LV.
  Avoid internal error when resizing cache type _tdata LV (not yet supported).
  Show original converted names when lvconverting LV to pool volume.
  Move lib code used only by liblvm into metadata-liblvm.c.
  Distinguish between device not found and excluded by filter.
  Monitor external origin LVs.
  Remove the replicator code, including configure --with-replicators.
  Allow lvcreate --type mirror to work with 100%FREE.
  Improve selection of resource name for complex volume activation lock.
  Avoid cutting first character of resource name for activation lock.
  Support for encrypted devices in fsadm.
  Improve thin pool overprovisioning and repair warning messages.
  Fix incorrect adjustment of region size on striped RaidLVs.

Version 2.02.175 - 6th October 2017
===================================
  Use --help with blockdev when checking for --getsize64 support in fsadm.
  Dump lvmdbusd debug information with SIGUSR1.
  Fix metadata corruption in vgsplit and vgmerge intermediate states.
  Add PV_MOVED_VG PV status flag to mark PVs moving between VGs.
  Fix lvmdbus hang and recognise unknown VG correctly.
  Improve error messages when command rules fail.
  Require LV name with pvmove in a shared VG.
  Allow shared active mirror LVs with lvmlockd, dlm, and cmirrord.
  Support lvconvert --repair with cache and cachepool volumes.
  lvconvert --repair respects --poolmetadataspare option.
  Mark that we don't plan to develop liblvm2app and python bindings any further.
  Fix thin pool creation in shared VG. (2.02.173)

Version 2.02.174 - 13th September 2017
======================================